# ica

./: .gitignore  Cargo.toml  README.md  buf.yaml
.cargo/: config.toml
api/: Cargo.toml  build.rs
api/src/: lib.rs  main.rs  service.rs
api/tests/: integration_test.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/schema/: attributes.rs  edge.rs  mod.rs  node.rs
engine/: Cargo.toml  build.rs
engine/src/: compute_fn.rs  lib.rs  main.rs  mem_store.rs  repository.rs  service.rs
engine/tests/: integration_test.rs
layout/: Cargo.toml
layout/src/: lib.rs
proto/: schema.proto
proto/ica/schema/v1/: schema.proto
view/: Cargo.toml  build.rs  index.html
view/assets/: sw.js
view/src/: app.rs  client.rs  lib.rs  main.rs
