[package]
name = "ica-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
ica-core = { path = "../core", package = "ica-core" }
prost = { version = "0.14.3" }
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14.3", features = ["transport", "codegen"] }
tonic-prost = { version = "0.14.3" }

[build-dependencies]
tonic-prost-build = { version = "0.14.3" }

[dev-dependencies]
tokio-stream = "0.1"
