[package]
name = "ica-core"
version = "0.1.0"
edition = "2024"
description = "Impact Cascade Assessment (Оценка влияния)"

[dependencies]
dotenv = { version = "*" }
prost = { version = "0.14.3" }
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14.3", features = ["transport", "codegen"] }

[build-dependencies]
tonic-prost-build = { version = "0.14.3" }
walkdir = { version = "2.5.0" }
