[package]
name = "ica-core"
description = "Impact Cascade Assessment. Core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
