[package]
name = "ica-engine"
version = "0.1.0"
edition = "2024"
description = "Impact Cascade Assessment (Оценка влияния)"

[dependencies]
ica-core = { path = "../core", package = "ica-core", version = "0.1.0" }
prost = { version = "0.14.3" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14.3", features = ["transport", "codegen"] }
tonic-prost = { version = "0.14.3" }

[build-dependencies]
tonic-prost-build = { version = "0.14.3" }
walkdir = { version = "2.5" }
