[package]
name = "ica-layout"
description = "Impact Cascade Assessment. Layout"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
ica-core = { path = "../core", package = "ica-core", version = "0.1.0" }
petgraph = "0.8.3"
rand = "0.10.0"

[dev-dependencies]
svg = { version = "0.18.0" }
