[package]
name = "ica-view"
description = "Impact Cascade Assessment. View"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.33"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
eframe = { version = "0.33", default-features = false, features = [
  # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  # "persistence",   # Enable restoring app state when restarting the app.
  "wayland", # To support Linux (and CI)
  "x11",     # To support older Linux distributions (restores one of the default features)
] }
prost = "0.14.3"
tonic-prost = "0.14.3"
tonic = { version = "0.14.3", default-features = false, features = ["codegen"] }
tonic-web = "0.14.3"
tonic-web-wasm-client = "0.9"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Request",
  "Response",
  "Headers",
  "RequestInit",
  "RequestMode",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
] }
tokio = { version = "1.0", features = [
  "rt",
  "macros",
], default-features = false }
tokio-stream = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }

[build-dependencies]
tonic-prost-build = "0.14.3"
walkdir = "2.5"

# [target.'cfg(target_arch = "wasm32")'.dependencies]


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
